hugo/k3s/hugo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-app
  namespace: hugo
  labels:
    app: hugo-app
spec:
  replicas: 1
  selector:
    matchLabels:
        app: hugo-app
  template:
    metadata:
      labels:
        app: hugo-app
    spec:
      containers:
        - name: hugo-app
          image: docker.io/pwnnpepper/hugo-blog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
