hugo/k3s/hugo_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hugo-svc
  namespace: hugo
spec:
  selector:
    app: hugo-app
  ports:
    - port: 80
      targetPort: 80
